fixup! working bundle without duplicated classes
Signed-off-by: Sam Gammon <sam@elide.ventures>